# AIEmailCoach-WebApp

./: .gitignore  COMMIT_MESSAGE.txt  DEVLOG.md  FRONTEND_AUTH_TUTORIAL.md  LICENSE  README.md  SETUP_OAUTH.md  SYNC_IMPLEMENTATION_SUMMARY.md  langgraph.json  package-lock.json  package.json  pyproject.toml
.langgraph_api/: .langgraph_checkpoint.2.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
Articles/: 0_FULL_SYSTEM_ARCHITECTURE_ARTICLE.md  1_USER_REGISTRATION_ARTICLE.md  3_EMAIL_SYNC_ARTICLE.md  DEVLOG.md
checklists/: API_TESTING_CHECKLIST.md
src/ai_email_coach/: __init__.py  configuration.py  graph.py  prompts.py  state.py
src/ai_email_coach/agent_graph/: __init__.py  graph.py
webapp/.tokens/: delta_inbox.txt  ms_refresh_token.txt
webapp/backend/: databse.db  email_mock.py  exceptions.py  main.py  requirements.txt  test_streaming.sh
webapp/backend/ai/: README.md  __init__.py  classification_service.py  config.py
webapp/backend/auth/: router.py  schemas.py  service.py
webapp/backend/core/: config.py  ms_graph.py  outlook.py  refresh_token.txt  retrieve_messages_all_emails.py
webapp/backend/db/: database.py
webapp/backend/email_accounts/: __init__.py  router.py  schemas.py  service.py
webapp/backend/emails/: router.py  schemas.py  service.py
webapp/backend/entities/: delta_token.py  email.py  email_account.py  users.py
webapp/backend/models/: email.py
webapp/backend/router/: email.py
webapp/backend/schemas/: email.py
webapp/frontend/: .vercelignore  next.config.ts  package-lock.json  package.json
(+46 files in other folders)
